Added a section for bonuses in README

--- a/workdir/README
+++ b/workdir/README
@@ -1,10 +1,13 @@
-joke
+Sorry, no human was motivated to write a joke here. TODO: implement something to get a random joke from an API on the Internet, whatever the API.
 
 Remarks:
     - 
 
+Bonuses done (/):
+    - 
+
 TODO list (you can read if you want, in case it's not blank):
-    
+    - 
 
 Methods I added:
     - 
